--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,23 @@
 .main {
     background-color: black;
     max-width: 100%;
+    height: 70px;
+    /* Set height to 100px */
+    margin-top: 20px;
+    display: flex;
+    /* Use flexbox */
+    align-items: center;
+    /* Center content vertically */
+    position: sticky;
+    border-radius: 20px;
+}
+
+.nav-profile {
+    margin-left: 40px;
+}
+
+.nav-home {
+    margin-left: 45px;
 }
 
 .navbar-container {
@@ -8,6 +25,8 @@
     justify-content: space-between;
     align-items: center;
     color: white;
+    flex-grow: 1;
+    /* Allow container to grow */
 }
 
 .icon {
@@ -19,22 +38,19 @@
     display: flex;
     align-items: center;
     margin-left: 200px;
+    /* Correct margin value */
 }
 
 .search-input {
-
     padding: 8px;
     margin-right: 8px;
     border-radius: 5px;
     border: none;
 }
 
-
-
 .signup-btn,
 .login-btn {
     background-color: transparent;
-
     border: none;
     color: white;
     font-weight: bold;
@@ -47,9 +63,11 @@
 }
 
 .login-btn {
-    margin-left: 250px;
+    margin-left: 400px;
+    /* Adjust margin value */
 }
 
 .signup-btn {
-    margin-left: 30px;
+    margin-left: 20px;
+    /* Adjust margin value */
 }
