--- a/music/src/components/MainBar.css
+++ b/music/src/components/MainBar.css
@@ -3,9 +3,37 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin-top: 15px;
+    border-radius: 20px;
     gap: 20px;
+    background-color: #3c3737;
     /* Adjust the gap between boxes */
     padding: 20px;
+}
+
+.new {
+    width: 100%;
+    height: 150px;
+    margin-left: 0px;
+    /* Adjust the height of the image */
+    background-color: #ccc;
+    background-size: cover;
+}
+
+.bollywood {
+    width: 100%;
+    height: 150px;
+    /* Adjust the height of the image */
+    background-color: #ccc;
+    background-size: cover;
+}
+
+.Main-img {
+    width: 100%;
+    height: 150px;
+    /* Adjust the height of the image */
+    background-color: #ccc;
+    background-size: cover;
 }
 
 .box {
@@ -24,7 +52,7 @@
 
 .box-content p {
     font-weight: bold;
-    color: antiquewhite;
+    color: #1DB954;
     margin-bottom: 10px;
 }
 
@@ -33,6 +61,8 @@
     height: 150px;
     /* Adjust the height of the image */
     background-color: #ccc;
+    background-size: cover;
+
     /* Add background color */
 }
 
@@ -47,9 +77,4 @@
     .box {
         width: calc(100% - 20px);
     }
-}
-
-#box-1 {
-    background-image: url('./assets/top50.jpg');
-
 }
