--- a/music/src/components/NavBar.css
+++ b/music/src/components/NavBar.css
@@ -3,12 +3,13 @@
     max-width: 100%;
     height: 70px;
     /* Set height to 100px */
-    margin-top: 20px;
     display: flex;
     /* Use flexbox */
     align-items: center;
     /* Center content vertically */
-    position: sticky;
+    margin-top: 180px;
+    position: -webkit-sticky;
+
 
 }
 
