--- a/music/src/components/SideBar.css
+++ b/music/src/components/SideBar.css
@@ -1,11 +1,10 @@
 .sidebar-container {
     display: flex;
-    height: 100%;
+    height: auto;
     background-color: #3c3737;
     border-radius: 10px;
     margin-top: 15px;
     margin-right: 15px;
-    height: auto;
     margin-left: 20px;
 
 }
@@ -14,7 +13,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
 }
 
 .sidebar-buttons {
@@ -32,11 +31,11 @@
 }
 
 .sidebar-button2 {
-    padding: 10px;
+    padding: 4px;
     margin: 5px 0;
     margin-left: 15px;
     border-radius: 10px;
-    color: green;
+    color: #1DB954;
     background-color: #171212;
     width: 85px;
 
@@ -45,22 +44,32 @@
     font-weight: bold;
 }
 
+.sidebar-button1 a {
+    text-decoration: none;
+    color: #1DB954;
+}
+
+.sidebar-button2 a {
+    text-decoration: none;
+    color: #1DB954;
+}
+
 .sidebar-button1 {
-    padding: 10px;
+    padding: 4px;
     margin-left: 20px;
     border-radius: 10px;
     margin-top: 10px;
-    color: green;
+    color: #1DB954;
     background-color: #171212;
     width: 85px;
-
+    text-decoration: none;
     border: none;
     cursor: pointer;
     font-weight: bold;
 }
 
 .sidebar-button a {
-    color: green;
+    color: #1DB954;
     text-decoration: none;
 }
 
@@ -70,7 +79,7 @@
     margin-left: 10px;
     border-radius: 10px;
     border: none;
-    color: green;
+    color: #1DB954;
     background-color: #171212;
     cursor: pointer;
     font-weight: bold;
