--- a/music/src/components/SignUpPage.css
+++ b/music/src/components/SignUpPage.css
@@ -1,34 +1,36 @@
 body,
 html {
-    margin-top: 1%;
+    margin: 0;
     padding: 0;
     height: 100%;
+    background-color: white;
+    /* Dark grey background color */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #191414;
 }
 
 .container {
-    width: 80%;
-    /* Adjust container width */
+    width: 100%;
     max-width: 400px;
-    /* Adjust max-width as needed */
+    margin-top: 20px;
     box-sizing: border-box;
     padding: 20px;
-    /* Add padding for better spacing */
-}
-
-.kuna {
-    background-color: #1DB954;
+    background-color: #1DB954;;
+    /* Dark grey background color */
     border-radius: 8px;
-    padding: 30px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.kuna {
+    padding: 30px;
+}
+
+h3 {
     font-size: 24px;
     text-align: center;
+    color: #fff;
+    /* White text color */
     margin-bottom: 20px;
 }
 
@@ -37,8 +39,8 @@ h1 {
 }
 
 .input-field label {
-    color: black;
-    /* Change label color to white */
+    color: #fff;
+    /* White label color */
     font-weight: 600;
     font-size: 14px;
     margin-bottom: 5px;
@@ -47,8 +49,13 @@ h1 {
 .input-field input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
+    /* White border */
     border-radius: 5px;
+    background-color: transparent;
+    /* Transparent input background */
+    color: #fff;
+    /* White text color */
 }
 
 .checkbox-field {
@@ -62,14 +69,13 @@ h1 {
 .checkbox-field label {
     font-size: 14px;
     color: #fff;
-    /* Change label color to white */
 }
 
-.signup-btn {
+.signup {
     background-color: #fff;
-    /* Change button background color */
+    color: #000;
+    /* Black text color */
     font-weight: 700;
-    color: #1DB954;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -79,8 +85,9 @@ h1 {
     display: block;
 }
 
-.signup-btn:hover {
-    background-color: #191414;
+.signup:hover {
+    background-color: #00ff00;
+    /* Green background color on hover */
     color: #fff;
-    /* Change button text color on hover */
+    /* White text color on hover */
 }
