--- a/music/src/components/MainBar.css
+++ b/music/src/components/MainBar.css
@@ -8,6 +8,9 @@
     gap: 20px;
     background-color: #3c3737;
     padding: 20px;
+    position: fixed;
+    top: 70px;
+    left: 270px;
 }
 
 .box {
