--- a/music/src/components/SignUpPage.css
+++ b/music/src/components/SignUpPage.css
@@ -1,63 +1,71 @@
-.wrap{
-    margin-top: 100px;
+/* SignUpPage.css */
+
+.signup-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.suc {
-    margin-top: 200px;
-    width: 350px;
-    margin: auto;
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    /* Display items in a column */
+    background-color: #36d236;
+    /* Green background color */
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #87e47f;
+    align-items: center;
+    /* Center items horizontally */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    /* Width of 80% */
+    max-width: 400px;
+    /* Optional: Set maximum width */
 }
 
-h3 {
+.signup-title {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
-    margin-bottom: ;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+.signup-input {
     width: 100%;
+    /* Width of 100% */
+    margin: 10px 0;
     padding: 10px;
-    margin-bottom: 15px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    border-radius: 5px;
 }
 
-input[type="checkbox"] {
-    margin-left: 5px;
-    margin-top: 3px;
-    margin: bottom 3px;;
-    vertical-align: middle;
-}
-
-button.special {
-    width: 100%;
-    background-color: #797c7c;
-    color: white;
+.signup-button {
+    width: 50%;
+    margin-top: 20px;
+    margin-left: 90px;
     padding: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    background-color: #daf6e5;
+    color: #6cdc58;
+    font-weight: 600;
     cursor: pointer;
 }
 
-button.special:hover {
-    background-color: #d9dbdb;
+.signup-button:hover {
+    background-color: #41484c;
 }
 
-button.special:focus {
-    outline: none;
+.signup-checkbox-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    /* Add margin to separate from other elements */
 }
 
-/* Additional Styles */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+.signup-checkbox {
+    margin-right: 5px;
+}
+
+.signup-label {
+    margin-left: 5px;
 }
