--- a/music/src/components/MainBar.css
+++ b/music/src/components/MainBar.css
@@ -3,18 +3,17 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 15px;
     border-radius: 20px;
-    gap: 20px;
+    gap: 11px;
     background-color: #3c3737;
-    padding: 20px;
+    padding: 10px;
     position: fixed;
     top: 70px;
     left: 270px;
 }
 
 .box {
-    width: calc(25% - 20px);
+    width: calc(21% - 20px);
     background-color: #171212;
     border-radius: 10px;
     overflow: hidden;
@@ -22,18 +21,20 @@
 }
 
 .box-content {
-    padding: 10px;
+    padding: 8px;
 }
 
 .box-content p {
     font-weight: bold;
+    text-decoration: none;
     color: #1DB954;
     margin-bottom: 10px;
+    font-size: 15px;
 }
 
 .box-img {
     width: 100%;
-    height: 150px;
+    height: 120px;
 
 }
 
@@ -90,4 +91,18 @@
 
 }
 
-/* Add more classes and background images as needed */
+.box9 .box-img {
+    background-size: cover;
+
+    background-repeat: no-repeat;
+    background-image: url('./assets/telgu.jpg');
+
+
+}
+
+.box10 .box-img {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('./assets/istockphoto-896391820-612x612.jpg');
+
+}
