--- a/music/src/components/SideBar.css
+++ b/music/src/components/SideBar.css
@@ -1,27 +1,23 @@
 .sidebar-container {
     display: flex;
-    height: auto;
+    height: 59.5vh;
+    width: 19.58vw;
     background-color: #3c3737;
     border-radius: 10px;
-    margin-top: 15px;
-    margin-right: 15px;
-    margin-left: 20px;
- position:fixed;
- top:70px;
+    margin-right: 10px;
+    margin-left: 10px;
+    position: fixed;
+    top: 70px;
 }
 
 .sidebar {
-
     display: flex;
     flex-direction: column;
-
 }
 
 .sidebar-buttons {
-    margin-top: 20px;
-    width: 200px;
-    margin-left: 10px;
-    justify-content: center;
+    margin-top: 15px;
+    justify-content: left;
     display: flex;
     flex-direction: column;
 }
@@ -34,12 +30,9 @@
 .sidebar-button2 {
     padding: 4px;
     margin: 5px 0;
-    margin-left: 15px;
+    font-size: 15px;
     border-radius: 10px;
-    color: #1DB954;
-    background-color: #171212;
-    width: 85px;
-
+    background-color: #3c3737;
     border: none;
     cursor: pointer;
     font-weight: bold;
@@ -57,16 +50,35 @@
 
 .sidebar-button1 {
     padding: 4px;
+    background-color: #3c3737;
     margin-left: 20px;
+    font-size: 15px;
     border-radius: 10px;
     margin-top: 10px;
     color: #1DB954;
-    background-color: #171212;
+
     width: 85px;
     text-decoration: none;
     border: none;
     cursor: pointer;
     font-weight: bold;
+}
+
+
+.artist {
+    border-radius: 10px;
+    border: none;
+    color: #1DB954;
+    cursor: pointer;
+    font-size: 15px;
+    margin-left: 40px;
+    padding: 10px;
+    background-color: #3c3737;
+    font-weight: bold;
+}
+
+.artist a{
+    color:#1DB954;
 }
 
 .sidebar-button a {
@@ -75,14 +87,12 @@
 }
 
 .sidebar-button {
-    padding: 10px;
-    margin: 5px 0;
-    margin-left: 10px;
     border-radius: 10px;
     border: none;
     color: #1DB954;
-    background-color: #171212;
     cursor: pointer;
+    font-size: 14px;
+    background-color: #3c3737;
     font-weight: bold;
 }
 
