--- a/music/src/components/MainBar.css
+++ b/music/src/components/MainBar.css
@@ -5,7 +5,7 @@
     align-items: center;
     border-radius: 20px;
     gap: 11px;
-    background-color: #3c3737;
+    background-color: #464343;
     padding: 10px;
     position: fixed;
     top: 70px;
