--- a/music/src/components/artist.css
+++ b/music/src/components/artist.css
@@ -16,7 +16,8 @@
 }
 
 .artist-list-container h2 {
-    font-size: 24px;
+    font-weight: 500;
+    font-size: 30px;
     margin-bottom: 20px;
 }
 
