--- a/music/src/components/HomePage.css
+++ b/music/src/components/HomePage.css
@@ -1,6 +1,6 @@
 .Home {
-    background-color: #5a5252;
-position: static;
+    background-color: rgb(95, 90, 90);
+    position: static;
 }
 
 .homepage-container {
