--- a/music/src/components/LoginPage.css
+++ b/music/src/components/LoginPage.css
@@ -1,67 +1,73 @@
 .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.login-form {
-    background-color: #38e449;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Transparent background color */
     padding: 20px;
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 70%;
-    /* Adjusted width for responsiveness */
-    max-width: 300px;
-    /* Optional: Set maximum width */
-}
-
-.login-title {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .login-form {
+    
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  .login-title {
+    color: white; /* Text color */
     text-align: center;
-    margin-bottom: 20px;
-    color: #373935;
-}
-
-.login-input-field {
+  }
+  
+  .login-input-field {
+    margin-bottom: 10px;
+  }
+  
+  .login-input-field input {
+    width: 100%;
     padding: 10px;
-    display: flex;
-    align-items: center;
-    width: auto;
-
-}
-
-.login-button {
-    width: 50%;
-    /* Adjusted width for responsiveness */
-    margin-top: 20px;
-
+    color: white;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    border: 1px solid #ccc;
+  }
+  
+  .login-button {
+    width: 100%;
+    padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #e4edf7;
-    color: #1fdd58;
-    padding: 7px;
-    font-size: 15px;
-    font-weight: 600;
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white; /* Button text color */
     cursor: pointer;
-}
-
-.login-button:hover {
-    background-color: #414243;
-}
-
-.login-checkbox-field {
+  }
+  
+  .login-button:hover {
+    background-color: #45a049; /* Hover color */
+  }
+  
+  .login-error {
+    color: red;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .login-checkbox-field {
     display: flex;
     align-items: center;
-}
-
-.login-checkbox-field input {
-    margin-right: 5px;
-}
-
-.login-new-user {
-    margin-right: 5px;
-}
+    margin-bottom: 10px;
+  }
+  
+  .login-checkbox-field input {
+    margin-right: 10px;
+  }
+  
+  .login-new-user {
+    color: white; /* Text color */
+  }
+  
+  .login-new-user a {
+    color: white; /* Link color */
+  }
+  
